Send Image , Show Full Image

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,13 +63,14 @@ dependencies {
     //library
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "com.airbnb.android:lottie:3.4.1"
+    implementation 'com.github.jrvansuita:PickImage:2.2.4'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
 
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
     implementation "com.squareup.retrofit2:retrofit:2.6.2"
